--- a/template/stage4.html
+++ b/template/stage4.html
@@ -1,13 +1,91 @@
+<style type="text/css">
+  /* This is a CSS file */
+
+  *{
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      -ms-box-sizing: border-box;
+      box-sizing: border-box;
+  } 
+  body{
+    max-width: 750px;
+    margin: 20px;
+    padding: 10px;
+    font-family: Helvetica;
+
+  }
+
+  .heading{
+    display: flex;
+  } 
+  .heading-text{
+    font-size: 20px;
+    margin-left: 30px;
+    margin-top: 20px;
+  } 
+
+  .image{
+      width: 50px;
+      height: 50px;
+      margin-left: 20px;
+  }
+  .image img {
+      width: 100%;
+      height: auto;
+  }
+
+
+  .lesson{
+    background-color: rgb(156, 216, 179);
+    font-size: 16px;
+    font-family: Helvetica;
+    padding-bottom: 10px;
+    border-radius: 20px;
+
+  }
+  .title{
+    background-color: #009966;
+  }
+
+  span.code {
+      font-family: Courier;
+      background-color: #BBBBBB;
+      padding: 2px 4px;
+      font-weight: bold;
+  }
+
+  .concepts{
+    padding-left: 10px;
+  }
+
+  h1{
+    text-align: center;
+    color:#339999;
+    background-color:#CCCCCC; 
+    border-radius: 20px;
+  }
+  h2{
+    background-color: #009966;
+    padding-top: 10px;
+    border-top-left-radius: 20px;
+    border-top-right-radius:20px;
+  }
+
+  h3{
+    font-size: 22px;
+    font-family: Helvetica;
+
+  }
+</style>
+
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="style.css">
   <title>ClassNote</title>
 </head>
-
 <body>
   <div class="heading">
-    <div class="image"><img src="photo.jpg" alt="Oops, cannot find the image"></div>
+    <!-- <div class="image"><img src="/home/jingya/projects/stage4Project/template/photo.jpg" alt="Oops, cannot find the image"></div> -->
     <div class="heading-text"> <a href="https://ca.linkedin.com/pub/jingya-wang/58/a00/6b8">Jingya</a>'s class notes.</div>
   </div>
   <div class="content">
@@ -22,12 +100,14 @@
       <li><a href="#lesson2.4">2.4:  Control Flow &#38; Debugging</a></li>
       <li><a href="#lesson2.5">2.5:  Structure Data &#38; How to Solve Problems</a></li>
       <li><a href="#lesson3">3.1-3.4:  Add Videos to Your Page</a></li>
+      <li><a href="#lesson4">4.1-4.8:  Allow Comments</a></li>
+      <li><a href="#lesson4Project">4:  Add Your Comments</a></li>
 
     </ul>
   </div>
   <div>
     <div><h1>Keypoints of Stage 1</h1></div>
-    <div class="lession">
+    <div class="lesson">
       <h2 id="lesson1.1"> 1.1:  the Basics of the Web and HTML</h2>    
       <div class="concepts">
         <h3> Web components</h3>
@@ -71,7 +151,7 @@
       </div>
     </div>  
 
-    <div class="lession">
+    <div class="lesson">
       <h2 id="lesson1.2">1.2: Creating a Structured Document</h2>
       <div class="concepts">
         <h3>Page Structure</h3>
@@ -108,7 +188,7 @@
       </div>
     </div>
 
-    <div class="lession">
+    <div class="lesson">
       <h2 id="lesson1.3">1.3: Adding CSS Style and HTML Structure</h2>
 
       <div class="concepts">
@@ -153,7 +233,7 @@
   
   <div>
     <div><h1>Keypoints of Stage 2</h1></div>
-    <div class = "lession">
+    <div class = "lesson">
       <h2 id="lesson2.1"> 2.1:  Introduction to Computer Science</h2>
       <div class="concepts">
         <h3>Computer science</h3>
@@ -176,8 +256,8 @@
       </div>
     </div>
 
-    <div class="lession">
-      <h2 id="lession2.2"> 2.2: Variables and Strings</h2>
+    <div class="lesson">
+      <h2 id="lesson2.2"> 2.2: Variables and Strings</h2>
       <div class="concepts">
         <h3>Variables</h3>
         <p>
@@ -196,8 +276,8 @@
       </div>
     </div>
 
-    <div class="lession">
-      <h2 id="lession2.3"> 2.3: Input &#8594; Function &#8594; Output</h2>
+    <div class="lesson">
+      <h2 id="lesson2.3"> 2.3: Input &#8594; Function &#8594; Output</h2>
       <div class="concepts">
         <h3>What is a function?</h3>
         <p>
@@ -233,8 +313,8 @@
       </div>
     </div>
 
-    <div class="lession">
-      <h2 id="lession2.4">2.4: Control Flow &#38; Debugging </h2>
+    <div class="lesson">
+      <h2 id="lesson2.4">2.4: Control Flow &#38; Debugging </h2>
       <div class="concepts">
         <h3>Comparison operators</h3>
         <p>
@@ -248,8 +328,8 @@
       </div>
     </div>
 
-    <div class="lession">
-      <h2 id="lession2.5">2.5: Structure Data &#38; How to Solve Problems</h2>
+    <div class="lesson">
+      <h2 id="lesson2.5">2.5: Structure Data &#38; How to Solve Problems</h2>
       <div class="concepts">
         <h3>List</h3>
         <p>
@@ -268,8 +348,8 @@
 
   <div>
     <div><h1>Keypoints of Stage 3</h1></div>    
-    <div class="lession">      
-      <h2>3.1-3.4:  Add videos to your page </h2>
+    <div class="lesson">      
+      <h2 id="lesson3">3.1-3.4:  Add videos to your page </h2>
       <div class="concepts">
         <h3>Object Oriented Programming</h3>
         <p>
@@ -296,8 +376,82 @@
     </div>
   </div>
   
+  <div>
+    <div><h1>Key Points of Stage 4</h1></div> 
+    <div class="lesson">
+      <h2 id="lesson4">4.1-4.8: Allow Comments</h2>
+      <div class="concepts">
+        <h3>Server</h3>
+        <p>
+            Servers include both the machaine, programs and data that hots the web.
+            <br>
+            <br>
+            HTTP is the most frequenly used communication protocal on the web.
+            <br>
+            <br>
+            URL: uniform resource locator. The minimum path is represented by protpcal and server host. 
+            <br>
+            <br>
+            Query parameters are following ?.
+            <br>
+            <br>
+            GET: the most often used method for requesting a doc from the server.
+            <br>
+            <br>
+            POST: send data to the server.
+            <br>
+            <br>
+            Use nice and accurate user agnet is always a nice curtesy.          
+        </p>
+        <h3>The importance of validating input</h3>
+        <p>
+          Input validattion can prevent the web application being hacked. Also, validate the input value and format can make sure the functions running smoothly. In case, the user input special symbol that can mess with the webpage, we usully use escaping on those symbols. 
+        </p>
+        <h3>HTML templates and abstraction</h3>
+        <p>
+          A template library is a library to build a complicated strings(html). The most often used template library is Jinja2. It is built into Google App Engin. Without using templates, the code are error prone, hard to make changes and don't have syntax highlighting. The library is tested by many programmers and running fast and errorless.
+          Template separates different types of code, makes more readable code, avoids repetition, make more secure websites and makes html easier to modify. 
+          <br>
+          <br>
+          Without avoiding repetition, the code that do the same thing will often repeat over and over, like copying and pasting certain style attributes into many HTML elements or rewriting the same code (sometimes with minor differences) many times. This can lead to errors when the programmer decides to make a change to something. If they do not diligently make that same change everywhere the repeated code appears, problems will arise.
+        </p>
+      </div>
+      
+    </div>
+
+    <div class="lesson">  
+      <h2 id="lesson4Project">Add your comments</h2> 
+      <form action="/sign?guestbook_name={{ guestbook_name }}" method="post">
+        <div><textarea name="content" rows="3" cols="60"></textarea></div>
+        <div><input type="submit" value="Sign Guestbook"></div>
+      </form>
+
+      <hr>
+
+      <form>Guestbook name:
+        <input value="{{ guestbook_name }}" name="guestbook_name">
+        <input type="submit" value="switch">
+      </form>
+
+      <a href="{{ url|safe }}">{{ url_linktext }}</a>
+      <hr>
+      {% for greeting in greetings %}
+        {% if greeting.author %}
+          <b>{{ greeting.author.email }}
+            {% if user and user.user_id() == greeting.author.identity %}
+              (You)
+            {% endif %}
+          </b> wrote:
+        {% else %}
+         An anonymous person wrote:
+        {% endif %}
+        <blockquote>{{ greeting.content }}</blockquote>
+      {% endfor %}  
+
+        
+    </div> 
+  </div>
 
 
 </body>
-
 </html>
