--- a/template/stage4.html
+++ b/template/stage4.html
@@ -102,6 +102,7 @@
       <li><a href="#lesson3">3.1-3.4:  Add Videos to Your Page</a></li>
       <li><a href="#lesson4">4.1-4.8:  Allow Comments</a></li>
       <li><a href="#lesson4Project">4:  Add Your Comments</a></li>
+      <li><a href="#lesson5.2">5.2: The Power of APIs</a></li>
 
     </ul>
   </div>
@@ -377,7 +378,7 @@
   </div>
   
   <div>
-    <div><h1>Key Points of Stage 4</h1></div> 
+    <div><h1>Keypoints of Stage 4</h1></div> 
     <div class="lesson">
       <h2 id="lesson4">4.1-4.8: Allow Comments</h2>
       <div class="concepts">
@@ -452,6 +453,62 @@
     </div> 
   </div>
 
+  <div>
+    <div><h1>Keypoints of Stage 5</h1></div> 
+    <div class="lesson">
+      <h2 id="lesson5.2">5.2: The power of APIs</h2>
+      <div class="concepts">
+        <h3>API</h3>
+        <p>
+          API is application programming interface, which make the website not just communicate with humans but also computers. Send data that formating in XML or JSON that are designed to be understand by computers. Lots of webpages can be accessed as XML and JSON. To access the data and content of webpages, try to find their APIs, for example, Google it.
+        </p>
+        <h3>HTTP clients</h3>
+        <p>
+          Servers can request data from other servers. 
+        </p>
+        <h3>XML</h3>
+        <p>
+          XML is alot like HTML because they share a common ancestor in SGML. In XML, every tag has to have a closing tag and more consistent than HTML.
+          <br>
+          <br>
+          Use minidom to parsing XML and get element by tag.
+        </p>
+        <h3>JSON</h3>
+        <p>
+          JSON (JavaScript Object Notation) is a nice kind of computer and human readable way to exchange data in a consistent format. Jason is valid JavaScript code.
+          <br>
+          <br>
+          Import JSON and converte the doc into JSON and then access the data with keys.
+        </p>
+        <h3>How to be a good citizen on the internet</h3>
+        <p>
+          Use a good user-agent: specify headers, include name, link of the website.
+          <br>
+          <br>
+          rate-limit yourself
+        </p>
+        <h3>Protocol  for communicating between two machines</h3>
+        <p>
+          SOAP (based on XML) (Microsoft) hipmunk
+          <br>
+          <br>
+          Proto buffers (Google)
+          <br>
+          <br>
+          Thrift (Facebook)
+          <br>
+          <br>
+          XML
+          <br>
+          <br>
+          JSON
 
+        </p>
+
+
+
+      </div>       
+    </div> 
+  </div>
 </body>
 </html>
